--- a/frontend/src/features/auth/components/styles/FormContainer.scss
+++ b/frontend/src/features/auth/components/styles/FormContainer.scss
@@ -40,7 +40,7 @@
     background-color: darkgreen;
   }
 
-  link {
+  .link {
     margin-top: 0.625rem; // 10px
     border: 1px solid #ccc;
     border-radius: 0.3125rem; // 5px
